Fix spacing error in styles.css file

--- a/styles.css
+++ b/styles.css
@@ -22,14 +22,17 @@ body {
   justify-content: space-between;
 }
 
-h1 {
-  width: 327px;
+.main-heading h1 {
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
   height: 150px;
+  width: 327px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 12px;
   margin-left: 24px;
   margin-top: 128px;
-  margin-bottom: 12px;
-  font-size: 40px;
-  font-weight: 700;
   color: #172b4d;
 }
 
@@ -39,6 +42,7 @@ p {
   margin-left: 24px;
   margin-top: 12px;
   font-size: 16px;
+  font-weight: 400;
   color: #344563;
 }
 
